package CD.Impl.ScooterRental.users;

public class Cliente extends User{
}
