package CD.Impl.ScooterRental.users;

public class Operatore extends User {

    @Override
    public void login(){

    }

    @Override
    public void logout(){

    }
}
