package CD.Impl.ScooterRental.vehicles;

public class Battery {
    private String model;
    private int level;

    public Battery(String model, int level) {
        this.level = level;
        this.model = model;
    }
}
